Fix pom build because of nonexistant environment variable. Also, implement Serializable interface to satisfy FunBugs

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@
                 <configuration>
                     <verbose>true</verbose>
                     <fork>true</fork>
-                    <executable>${JAVA_1_8_HOME}/bin/javac</executable>
                     <compilerVersion>1.8</compilerVersion>
                     <compilerArgument>-Xlint:unchecked</compilerArgument>
                     <source>1.8</source>
@@ -54,6 +53,26 @@
                     <encoding>UTF-8</encoding>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <effort>Max</effort>
+                    <threshold>Default</threshold>
+                    <xmlOutput>true</xmlOutput>
+                    <!--<includeFilterFile>findbugs-include.xml</includeFilterFile>-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>analyze-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
