--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.discoshiny</groupId>
     <artifactId>generic-comparator</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -38,7 +38,7 @@
         <connection>scm:git:https://github.com/Spacekop/generic-comparator.git</connection>
         <developerConnection>scm:git:git@github.com:Spacekop/generic-comparator.git</developerConnection>
         <url>https://github.com/Spacekop/generic-comparator</url>
-        <tag>generic-comparator-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
